--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <h2>Nossos Serviços!</h2>
       <div class="services-content">
         <div class="services-card">
-          <img class="services-image" src="img/imagem-carro.jpg" />
+          <img class="services-image" src="./img/imagem-carro.jpg" />
           <div class="services-text">Translados Gratuitos</div>
         </div>
         <div class="services-card">
