--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <section class="city">
       <div class="item-flex-50">
-        <img class="city-image" src="src/img/imagem-cidade.jpg" />
+        <img class="city-image" src="./img/imagem-cidade.jpg" />
       </div>  
       <div class="item-flex-50">
         <div class="city-content">
@@ -40,11 +40,11 @@
           <div class="services-text">Translados Gratuitos</div>
         </div>
         <div class="services-card">
-          <img class="services-image" src="src/img/imagem-quarto.jpg" />
+          <img class="services-image" src="./img/imagem-quarto.jpg" />
           <div class="services-text">Quartos Arejados</div>
         </div>
         <div class="services-card">
-          <img class="services-image" src="src/img/imagem-vista.jpg" />
+          <img class="services-image" src="./img/imagem-vista.jpg" />
           <div class="services-text">Vista para o Mar</div>
         </div>
         </div>
@@ -59,7 +59,7 @@
         </div>
       </div>
       <div class="item-flex-50">
-        <img class="city-image" src="src/img/imagem-duvida.jpg" />
+        <img class="city-image" src="./img/imagem-duvida.jpg" />
       </div>
     </section>
     <footer>
